--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
 	    <header class="d-flex justify-content-center py-1">
 		<nav class="navbar navbar-expand-lg ">
 		  <div class="container-fluid ">
-		    <a class="navbar-brand" href="#"><img class="icon_nav hidden-mobile" src="img/apple.png"></a>
-		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-		      <img class="icon_toggler" src="img/apple.png">
-		    </button>
-		    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-		    <ul class="nav nav-pills navbar-nav">
+		    <img class="icon_nav" src="img/apple.png">
+		    
+		    <ul class="nav nav-pills">
 		        <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 		        <li class="nav-item"><a href="#Iphone" class="nav-link">Iphone</a></li>
 		        <li class="nav-item"><a href="#MacBook" class="nav-link">MacBook</a></li>
